# research-assistant

./: .env.example  .gitignore  LOCAL_MODEL_GUIDE.md  Multi-Agent文献综述系统设计方案.md  PROJECT_REPORT.md  README.md  RESUME_DESC.md  advise_01.md  advise_02.md  advise_03.md  config.yaml  install.sh  install_local_model.sh  main.py  mock_search.py  openclaw_01.md  openclaw_02.md  openclaw_03.md  openclaw_04.md  pyproject.toml  pytest.ini  requirements.txt  requirements_gpu.txt  run_tests.sh  run_web.py  setup_gpu.bat  setup_gpu.py  test_apis.py  test_cluster.py  test_env.py  test_gpu.py  test_mode_search.py  test_screen.py
latex/: bib-template.bib  description_of_multi_research_assistant.tex  sec-01-intro.tex  sec-02-lit-rev.tex  sec-03-model.tex  sec-04-method.tex  sec-05-exp.tex  sec-06-concl.tex
project_report/: report.tex
src/: __init__.py  __main__.py  cli.py
src/agents/: __init__.py  cluster_agent.py  screen_agent.py  search_agent.py  summary_agent.py
src/config/: __init__.py
src/core/: __init__.py  agent.py  coordinator.py  rq_manager.py  workspace.py
src/utils/: __init__.py  api.py  api_extended.py  embedding.py  exceptions.py  llm.py  pdf.py  text.py
src/web_ui/: __init__.py  app.py  handlers.py  views.py
tests/: README.md  __init__.py  conftest.py  test_agents.py  test_config.py  test_integration.py  test_other_agents.py  test_rq_manager.py  test_screen_agent.py  test_search_agent.py  test_workspace.py
