[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-literature-review"
version = "1.0.0"
description = "Multi-Agent Literature Review System based on IEEE Access 2025 paper"
authors = [
    {name = "Research Assistant Team", email = "research@openclaw.ai"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # LLM Framework
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-core>=0.1.0",

    # API and Networking
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",

    # PDF Processing
    "PyPDF2>=3.0.0",
    "pymupdf>=1.23.0",

    # Text Processing
    "tiktoken>=0.5.0",

    # Data Processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",

    # Machine Learning
    "scikit-learn>=1.3.0",

    # Clustering
    "hdbscan>=0.8.0",

    # Visualization (optional)
    "matplotlib>=3.7.0",
    "plotly>=5.17.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.2.0",
    "click>=8.1.0",
    "tqdm>=4.66.0",

    # Async support
    "asyncio>=3.4.3",
    "nest-asyncio>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]
full = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
]
gpu = [
    "faiss-gpu>=1.7.4",
    "torch>=2.0.0",
    "transformers>=4.35.0",
]

[project.scripts]
lit-review = "src.cli:main"
research-assistant = "src.cli:main"

[project.urls]
Homepage = "https://github.com/openclaw-llm/research-assistant"
Documentation = "https://github.com/openclaw-llm/research-assistant#readme"
Repository = "https://github.com/openclaw-llm/research-assistant"
Issues = "https://github.com/openclaw-llm/research-assistant/issues"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"src" = ["*.json", "*.md", "prompts/*.txt"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | \.eggs
    | \.tox
    | build
    | dist
    | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
